# AAMCC

./: .gitignore  CMakeLists.txt  GRATE.cc  README.md
Abla/include/: AblaEvaporation.hh  G4Abla.hh  MyAblaEvaporation.hh
Abla/src/: AblaEvaporation.cc  G4Abla.cc  MyAblaEvaporation.cc
Evaporation/src/: G4CoulombBarrier.cc  G4DeuteronEvaporationProbability.cc  G4Evaporation.cc  G4EvaporationChannel.cc  G4EvaporationFactory.cc  G4EvaporationProbability.cc
FermiBreakUp/: AAMCCFermiBreakUp.cc  AAMCCFermiBreakUp.cpp  CMakeLists.txt  G4B9FermiFragment.cc  G4B9FermiFragment.hh  G4Be8FermiFragment.cc  G4Be8FermiFragment.hh  G4FermiBreakUp.cc  G4FermiBreakUp.hh  G4FermiConfiguration.hh  G4FermiConfigurationList.hh  G4FermiFragmentsPool.cc  G4FermiFragmentsPool.hh  G4FermiPhaseSpaceDecay.cc  G4FermiPhaseSpaceDecay.hh  G4FermiPhaseSpaceDecay.icc  G4He5FermiFragment.cc  G4He5FermiFragment.hh  G4Li5FermiFragment.cc  G4Li5FermiFragment.hh  G4StableFermiFragment.hh  G4UnstableFermiFragment.hh  G4VFermiBreakUp.hh  G4VFermiFragment.hh  VFermiBreakUp.cc  VFermiBreakUp.hh
FermiBreakUp/lib/: CMakeLists.txt
FermiBreakUp/lib/Utilities/NucleiProperties/: NucleiProperties.h
FermiBreakUp/lib/Utilities/NucleiProperties/Impl/: FastNucleiProperties.cpp
Fission/include/: G4CompetitiveFission.hh
Fission/src/: G4CompetitiveFission.cc
Multifragmentation/include/: G4StatMFChannel.hh  G4StatMFFragment.hh  G4StatMFParameters.hh
Multifragmentation/src/: G4StatMF.cc  G4StatMFChannel.cc  G4StatMFFragment.cc  G4StatMFMacroBiNucleon.cc  G4StatMFMacroChemicalPotential.cc  G4StatMFMacroMultiNucleon.cc  G4StatMFMacroMultiplicity.cc  G4StatMFMacroTemperature.cc  G4StatMFMicroManager.cc  G4StatMFMicroPartition.cc  G4StatMFParameters.cc  G4VStatMFEnsemble.cc  G4VStatMFMacroCluster.cc
MyFermiBreakUp/lib/Utilities/NucleiProperties/: FermiNucleiProperties.cpp
PureNeutrons/include/: PureNeutrons.hh
PureNeutrons/src/: PureNeutrons.cc
TGlauber/: CMakeLists.txt  Makefile  TGlauNucleon.cc  TGlauNucleon.hh  TGlauNucleus.cc  TGlauNucleus.hh  TGlauberMC.cc  TGlauberMC.hh  cmake_install.cmake
include/: AAMCC.hh  AAMCCReader.hh  AAMCCWriter.hh  AAMCConstants.hh  AAMCCwriter.hh  DeexcitationHandler.hh  DeexcitationHandler.hh~  Ericson.hh  ExcitationEnergy.hh  ExcitationHandler.hh  FermiMomentum.hh  G4ExcitationHandler.hh  GMSTClustering.hh  GRATEPhysicsList.hh  GRATEmanager.hh  GetInitData.hh  GlauberCollisionReader.hh  InitialConditions.hh  LinkDef.hh  MCIniReader.hh  MCiniWriter.hh  McIniReader.hh  Mcini.hh  MyDeexcitationHandler.hh  Nucleon.hh  VCollisionReader.hh  VReader.hh  VWriter.hh  WriteToFile.hh
src/: AAMCC.cc  AAMCCReader.cc  AAMCCWriter.cc  DeexcitationHandler.cc  Ericson.cc  ExcitationEnergy.cc  ExcitationHandler.cc  FermiMomentum.cc  G4ExcitationHandler.cc  G4Fragment.cc  GMSTClustering.cc  GRATEPhysicsList.cc  GRATEmanager.cc  GaimardSchmidt.cc  GetInitData.cc  GlauberCollisionReader.cc  InitialConditions.cc  MCIniReader.cc  MCiniWriter.cc  McIniReader.cc  MyDeexcitationHandler.cc  Nucleon.cc  WriteToFile.cc
